extension facebook finished

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
-{ 
-"manifest_version":3,
-"name":"Extensió",
-"short_name":" extens",
-"description":"Extensió per a Facebook",
-"version":"1.0",
-"action":{
-"default_popup":"index.html"
-},
-"permissions": ["activeTab", "tabs", "scripting"]
+{
+  "manifest_version": 3,
+  "name": "Extensió Facebook",
+  "short_name": " extens",
+  "description": "Extensió per a Facebook",
+  "version": "1.0",
+  "action": {
+    "default_popup": "index.html"
+  },
+  "permissions": ["activeTab", "tabs", "scripting"]
 }
